--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -7,11 +7,11 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home"
-            android:title="@string/menu_home" />
+            android:title="Начало" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_map"
-            android:title="@string/menu_map" />
+            android:title="Карта" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_newacc"
