--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -31,7 +31,7 @@
 
     <fragment
         android:id="@+id/nav_send"
-        android:name="com.appp.ecovitae.ui.send.SendFragment"
+        android:name="com.appp.ecovitae.ui.send.ShopFragment"
         android:label="@string/menu_send"
         tools:layout="@layout/fragment_send" />
 </navigation>
