--- a/app/src/main/res/layout/dial_throw_in.xml
+++ b/app/src/main/res/layout/dial_throw_in.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="350dp"
     android:layout_height="475dp"
     android:layout_gravity="center"
@@ -11,53 +12,61 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.7"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView8"
-                android:layout_width="match_parent"
+                android:layout_width="273dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Изхвърлете в"
-                android:textAppearance="@style/biggreen" />
+                android:text="Изхвърлете в някой от тези кошове:"
+                android:textAppearance="@style/title" />
 
             <TextView
                 android:id="@+id/txtclose"
-                android:layout_width="match_parent"
+                android:layout_width="26dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:text="X" />
+                android:layout_margin="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:gravity="center|top"
+                android:text="X"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView12"
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="ЖЪЛТИЯ/ЗЕЛЕНИЯ" />
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            />
 
         <Button
             android:id="@+id/throwout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Изхвърли" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1.95"
+            android:background="#00BCD4"
+            android:foregroundGravity="bottom"
+            android:text="Изхвърли"
+            android:textAppearance="@style/txt_expandable" />
 
     </LinearLayout>
 
