--- a/app/src/main/res/layout/fragment_shops.xml
+++ b/app/src/main/res/layout/fragment_shops.xml
@@ -11,24 +11,18 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView12"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="Бонуси"
+            android:gravity="center_horizontal"
+            android:text="Нашите партньори"
             android:textAppearance="@style/title" />
 
-        <ScrollView
-            android:id="@+id/bonus_list"
+        <ListView
+            android:id="@+id/shops_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
