--- a/app/src/main/res/layout/fragment_bonus.xml
+++ b/app/src/main/res/layout/fragment_bonus.xml
@@ -19,16 +19,11 @@
             android:text="Бонуси"
             android:textAppearance="@style/title" />
 
-        <ScrollView
+        <ListView
             android:id="@+id/bonus_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
