--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#15B3B3</color>
-    <color name="colorPrimaryDark">#029CAA</color>
-    <color name="colorAccent">#4BABFF</color>
+    <color name="colorPrimary">#42A753</color>
+    <color name="colorPrimaryDark">#419945</color>
+    <color name="colorAccent">#419599</color>
     <color name="colorFREE">#F7D1FFD2</color>
     <color name="grey">#A9A9A9</color>
     <color name="colorFAB1">#2196F3</color>
