--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,9 +25,11 @@
             android:id="@+id/textView11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10px"
             android:gravity="center|center_horizontal"
             android:text="Това е Вашият прогрес"
-            android:textAppearance="@style/titlesmol" />
+            android:textAppearance="@style/titlesmol"
+            android:textSize="45px" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,9 +38,13 @@
 
             <Button
                 android:id="@+id/lvfrom"
+                style="@style/FirebaseUI.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|left"
+                android:layout_marginLeft="5pt"
+                android:alpha="5"
+
                 android:text="1" />
 
             <Space
@@ -48,9 +54,11 @@
 
             <Button
                 android:id="@+id/lvto"
+                style="@style/FirebaseUI.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="4pt"
                 android:text="2" />
         </LinearLayout>
 
@@ -69,7 +77,25 @@
             android:id="@+id/nextlevel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_marginLeft="4pt"
+            android:layout_marginRight="4pt"
+            android:text="TextView"
+            android:textAppearance="@style/txt_expandable" />
+
+        <TextView
+            android:id="@+id/equals"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4pt"
+            android:layout_marginRight="4pt"
+            android:text="TextView"
+            android:textAppearance="@style/txt_expandable"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/broi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
