--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,42 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="#4CAF50"
-    android:orientation="vertical"
+    android:background="#D54CAF50"
     android:gravity="bottom"
+    android:orientation="vertical"
     android:paddingLeft="15dp"
     android:paddingBottom="15dp">
 
     <ImageView
+        android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/image"
-        android:layout_marginBottom="15dp"/>
+        android:layout_marginLeft="5pt"
+        android:layout_marginBottom="10dp"
+        app:srcCompat="@mipmap/ic_launcher" />
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Title"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is our navigation drawer"
-        android:textColor="#FFFFFF"/>
+        <Button
+            android:id="@+id/lvfrom"
+            style="@style/FirebaseUI.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|left"
+            android:alpha="5"
+
+            android:text="1" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/lvto"
+            style="@style/FirebaseUI.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="5pt"
+            android:text="2" />
+    </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyleHorizontal"
+        android:id="@+id/progress"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:indeterminate="false"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="10dp"
         android:max="100"
-        android:progress="10" />
+        android:progress="20"
+        android:scaleY="3" />
+
 
 </LinearLayout>
