--- a/app/src/main/res/layout/bonus_item.xml
+++ b/app/src/main/res/layout/bonus_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -52,6 +53,22 @@
                     android:layout_weight="1"
                     android:text="TextView"
                     android:textAppearance="@style/txt_expandable" />
+
+                <TextView
+                    android:id="@+id/cena"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="TextView"
+                    android:textAppearance="@style/txt_expandable" />
+
+                <Button
+                    android:id="@+id/button2"
+                    style="@style/FirebaseUI.Button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="Избери" />
 
             </LinearLayout>
 
