--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -111,14 +111,97 @@
                 android:textSize="20dp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15pt"
+                android:layout_weight="1"
+                android:text="От компания:"
+                android:textAppearance="@style/txt_expandable"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/comp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textAppearance="@style/txt_expandable"
+                android:textSize="20dp" />
+        </LinearLayout>
+
         <Button
             android:id="@+id/logoutBtn"
             style="@style/FirebaseUI.Button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_marginBottom="5dp"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="Изход от профила" />
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:text="Въведете кода, който е даден на Вашата компания."
+            android:textAppearance="@style/txt_expandable"
+            android:textSize="17dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="Код"
+                android:inputType="textPersonName" />
+
+            <Button
+                android:id="@+id/add"
+                style="@style/FirebaseUI.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Въведи" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/nope"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Моля, въведете правилен код!"
+            android:textAppearance="@style/txtnav"
+            android:textColor="#EECE1616"
+            android:textSize="17dp" />
+
+        <TextView
+            android:id="@+id/yes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Вашата компания беше въведена!"
+            android:textAppearance="@style/txtnav"
+            android:textColor="#4CAF50"
+            android:textSize="17dp" />
+
 
     </LinearLayout>
 
