--- a/app/src/main/res/layout/tip_item.xml
+++ b/app/src/main/res/layout/tip_item.xml
@@ -26,14 +26,16 @@
             android:id="@+id/checkBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:text="Правите ли го?" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/pointss"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:text="TextView" />
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:visibility="gone" />
 
     </LinearLayout>
 
