--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -55,7 +55,7 @@
 
     <fragment
         android:id="@+id/nav_bonus"
-        android:name="com.appp.ecovitae.ui.send.BonusFragment"
+        android:name="com.appp.ecovitae.ui.bonus.BonusFragment"
         android:label="@string/menu_bonus"
         tools:layout="@layout/fragment_bonus" />
 
